-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v0.37 - Aug 5, 2018

 + --include='WILDCARD[;WILDCARD]' - Only include files matching a wildcard (case-insensitive)
 + --exclude='WILDCARD[;WILDCARD]' - Exclude files & directories matching a wildcard (case-insensitive)
 + --until=playback-end - Stop recording when the last playback track is finished
 + net.http: connect_timeout config setting
 + net.icy: support OGG stream
 *! queue: start the next track in list after an error has occurred with the current track
    + queue: next_if_error config setting
 - mixer: --mix didn't work
 - .m4a write: support conversion from .mp3 (inaccurate audio length)


fmedia v0.36 - May 5, 2018

 + "--start-dblevel=DB" - Skip initial audio until input signal level goes above DB
 + "--stop-dblevel=DB[;TIME]" - Stop processing if input signal level goes below DB for TIME time
 + "--meta": support "@file:FILENAME" - Read meta from file
 + "--flist=FILE" - Read filenames from FILE
 - "--flac-compression": named as "--flac-level" in help info (v0.16 bug)

 + GUI: File->"Analyze & Show PCM Info" command
 - GUI: queue: the next track is played in the same playlist (v0.35 bug)
 - GUI: List->Filter: segfault on use (v0.34 bug)
 - TUI: recording: "max dB" value could be incorrect

 + .flac: write picture block (via --meta="picture=@file:FILENAME")
 + .cue: support REM in TRACK context
 - PulseAudio: fix hanging


fmedia v0.35 - Apr 2, 2018

 + --prebuffer: Start recording by a command from user ('T' key), saving the previously bufferred seconds of audio
 + gui convert: aac_bandwidth conf option
 * gui convert: create/use just 1 playlist
 * flac: support variable-length frame stream
 - --seek, --until: time greater than 24h couldn't be used
 - core: segfault on using channel + sample rate conversion on an ICY stream (v0.34 bug)


fmedia v0.34.1 - Mar 14, 2018
