@@ -23,16 +23,16 @@ mixer                 mixer
 #include <FFOS/error.h>
 
 
-#define FMED_VER_MAJOR  0
-#define FMED_VER_MINOR  37
+#define FMED_VER_MAJOR  1
+#define FMED_VER_MINOR  0
 #define FMED_VER_FULL  ((FMED_VER_MAJOR << 8) | FMED_VER_MINOR)
-#define FMED_VER  "0.37"
+#define FMED_VER  "1.0"
 
 #define FMED_VER_GETMAJ(fullver)  ((fullver) >> 8)
 #define FMED_VER_GETMIN(fullver)  ((fullver) & 0xff)
 
 /** Inter-module compatibility version. */
-#define FMED_VER_CORE  ((FMED_VER_MAJOR << 8) | 36)
+#define FMED_VER_CORE  ((FMED_VER_MAJOR << 8) | 0)
 
 #define FMED_HOMEPAGE  "http://fmedia.firmdev.com"
 
